Move util stylesheet to separate responsive css files. Fix responsive layout on mobile.

--- a/src/app/components/css/styles.css
+++ b/src/app/components/css/styles.css
@@ -169,19 +169,6 @@ li.menuItemPopup a {
     margin-bottom: 15px;
 }
 
-.util {
-    font-size: 12pt;
-    text-decoration: none;
-    color: black;
-    border: 1px solid white;
-    padding: 0;
-    margin: 5px;
-}
-.util:hover {
-    border-bottom: 1px solid black;
-    /*text-decoration: underline;*/
-}
-
 
 /* Edit Mode */
 .utilEditSection {
