--- a/src/app/components/css/styles_mobile.css
+++ b/src/app/components/css/styles_mobile.css
@@ -166,6 +166,21 @@
         width: 180px;
     }
     
+/* grid3  */
+.util {
+    font-size: 12pt;
+    text-decoration: none;
+    color: black;
+    border: 1px solid white;
+    padding: 0;
+    margin: 5px;
+}
+.util:hover {
+    border-bottom: 1px solid black;
+    /*text-decoration: underline;*/
+}
+
+
 /*icon wrapper */
 .utilLi, .searchTitle {
     display: flex;
